--- a/index.html
+++ b/index.html
@@ -34,15 +34,18 @@
         </div>
 
         <!--------- Sub menu --------->
-        <div class="sub-menu" style="display:none">
+        <div class="sub-menu">
             <div class="sub-menu-wrap">
                 <div class="times-icon-wrap">
+                    <a href="#">
+                        <img src="./assets/img/logoipsum-logo-39.svg" alt="Logo">
+                    </a>
                     <i class="material-icons-outlined">close</i>
                 </div>
                 <div class="menu-wrap">
-                    <p class="item">Tính điểm</p>
-                    <p><a href="">Mục tiêu</a></p>
-                    <p class="item">Giới thiệu</p>
+                    <a href="#input-tg">Tính điểm</a>
+                    <a href="./Muc-tieu/">Mục tiêu</a>
+                    <a href="#footer" class="item">Giới thiệu</a>
                 </div>
                 <div class="nav-contact">
                     <p>© Tran Xuan Phuc</p>
