--- a/index.html
+++ b/index.html
@@ -158,11 +158,15 @@
                 </div>
 
                 <!-- ------- Output ------- -->
-                <div class="output">
+                <div class="output" id="photo">
                     <div class="desc-wrap">
                         <h3 class="table-label">Bảng kết quả</h3>
                         <p class="label-desc">(Kết quả đã được làm tròn)</p>
                         <p class="label-desc display">Kéo để xem toàn bộ ›</p>
+                        <p class="button" id="photo-btn">
+                            Chụp bảng
+                            <i class="material-icons-outlined">add_a_photo</i>
+                        </p>
                     </div>
                     <div class="table-wrap">
                         <div class="table table-output">
@@ -292,7 +296,9 @@
             </div>
         </div>
     </div>
+    <script src="./assets/js/html2canvas.min.js"></script>
+    <script src="./assets/js/canvas2image.js"></script>
+    <script src="./assets/js/script.js"></script>
+    <script src="./assets/js/display.js"></script>
 </body>
-<script src="./assets/js/script.js"></script>
-<script src="./assets/js/display.js"></script>
 </html>
