--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 </div>
 
                 <!-- ------- Output ------- -->
-                <div class="output" id="photo">
+                <div class="output" >
                     <div class="desc-wrap">
                         <h3 class="table-label">Bảng kết quả</h3>
                         <p class="label-desc">(Kết quả đã được làm tròn)</p>
@@ -169,7 +169,7 @@
                         </p>
                     </div>
                     <div class="table-wrap">
-                        <div class="table table-output">
+                        <div class="table table-output" id="photo">
                             <div class="row no-gutters first-row" style="border-radius: 6px 6px 0 0;">
                                 <div class="col l-1 m-1 c-1 th" style="border-radius: 6px 0 0 0;">STT</div>
                                 <div class="col l-2 m-2 c-2 th">Tên môn học</div>
