--- a/index.html
+++ b/index.html
@@ -179,7 +179,7 @@
                                 <div class="col l-2 m-2 c-2 th">Điểm thi</div>
                                 <div class="col l-1 m-1 c-1 th">Điểm hệ 10</div>
                                 <div class="col l-1 m-1 c-1 th">Điểm hệ 4</div>
-                                <div class="col l-1 m-1 c-1 th" style="border-radius: 0 6px 0 0;">Điểm chữ</div>
+                                <div class="col l-1 m-1 c-1 th" style="border-radius: 0 6px 0 0; border: none;">Điểm chữ</div>
                             </div>
                             <div class="sub-row">
                                 <div class="row no-gutters tr">
@@ -194,6 +194,10 @@
                                     <div class="col l-1 m-1 c-1 td"><p>---</p></div>
                                 </div>
                             </div>
+                            <p id="water-mark">
+                                <i class="material-icons-outlined">add_a_photo</i>
+                                Take by https://xuanphuccc.github.io/Tinh-diem/
+                            </p>
                         </div>
                     </div>
 
