--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 </ul>
             </div>
             <div class="dark-mode-wrap">
-                <p id="mode">Light mode</p>
+                <p id="mode">Dark mode</p>
                 <i class="material-icons-outlined">brightness_medium</i>
             </div>
         </div>
