--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
             <div class="sub-menu-wrap">
                 <div class="times-icon-wrap">
                     <a href="#">
-                        <img src="./assets/img/logoipsum-logo-39.svg" alt="Logo">
+                        <img src="./assets/img/Logo1.png" alt="Logo">
                     </a>
                     <i class="material-icons-outlined">close</i>
                 </div>
