--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
                     <a href="#footer" class="item">Giới thiệu</a>
                 </div>
                 <div class="nav-contact">
-                    <p># Tran Xuan Phuc</p>
+                    <p>@Tranxuanphuc</p>
                     <div class="brand-logo">
                         <div class="facebook">
                             <a href="https://www.facebook.com/xuanphuc.tran.superman/">
@@ -284,7 +284,7 @@
         <!-- ============ FOOTER ============ -->
         <div id="footer">
             <div class="footer-wrap">
-                <p># Tran Xuan Phuc</p>
+                <p>@Tranxuanphuc</p>
                 <div class="brand-logo">
                     <div class="facebook">
                         <a href="https://www.facebook.com/xuanphuc.tran.superman/">
