add score to table

--- a/index.html
+++ b/index.html
@@ -194,10 +194,11 @@
                                     <div class="col l-1 m-1 c-1 td"><p>---</p></div>
                                 </div>
                             </div>
-                            <p id="water-mark">
+                            <div id="water-mark">
+                                <p id="dtb"></p>
                                 <i class="material-icons-outlined">add_a_photo</i>
-                                Take by https://xuanphuccc.github.io/Tinh-diem/
-                            </p>
+                                <p>Take by https://xuanphuccc.github.io/Tinh-diem/</p>
+                            </div>
                         </div>
                     </div>
 
