--- a/test.html
+++ b/test.html
@@ -58,16 +58,33 @@
     </div>
 </body>
 <script>
-    var x = [ 'p0', 'p1', 'p2', 3]; 
+    var x = [1, 3, 4, 6, 2, 7, 9, 5, 8, 0]; 
 
     function call_me(params) {
-        alert('hello');
-        for (i=0; i<params.length; i++) {
-            alert(params[i])
+        for (i = 0; i < params.length; i++) {
+            console.log(params[i]);
         }
     }
 
+    function sorting (params) {
+        for(var i = 0; i < params.length - 1; i++) {
+            for (var j = i + 1; j < params.length; j++) {
+                if (params[i] < params[j]) {
+                    var tmp = params[i];
+                    params[i] = params[j];
+                    params[j] = tmp;
+                }
+            }
+        }
+    }
+
+    function run() {
+        sorting(x);
+        call_me(x);
+        console.table(x);
+    }
+
     var space = document.querySelector('.box');
-    space.addEventListener('click', call_me);
+    space.addEventListener('click', run);
 </script>
 </html>
