--- a/index.html
+++ b/index.html
@@ -95,10 +95,16 @@
             <div class="grid wide">
                 <div class="input-wraper"  id="input-tg">
                     <div class="training">
-                        <h4>Giải thích thuật ngữ:</h4>
-                        <p>Trọng số: là tỉ lệ của điểm quá trình 
+                        <h4>Hướng dẫn:</h4>
+                        <p>
+                        B1: Nhập đầy đủ thông tin vào các ô bên dưới (không được bỏ trống) <br>
+                        B2: Nhấn nút Lưu <br>
+                        B3: Kéo xuống bảng bên dưới để xem kết quả <br>
+                        B4: Làm tương tự với các môn tiếp theo <br>
+                        <br>*Trọng số: là tỉ lệ của điểm quá trình 
                         và điểm thi <br> (ví dụ: 40% - 60% tức là
                         điểm quá trình chiếm 40% và điểm thi chiếm 60% của điểm học phần).</p>
+                        <hr style="margin-bottom: 16px;">
                     </div>
     
                     <!-- ------------ Input ----------- -->
