--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
     <meta property="og:image" content="https://live.staticflickr.com/65535/51787284488_16171bd0bc_k.jpg">
     <meta property="og:image:width" content="1500" />
     <meta property="og:image:height" content="1500" />
-
     <meta property="og:description" content="Tính điểm chi tiết từng học phần và tính trung bình cả học kỳ đại học">
     <meta property="og:title" content="Tính điểm học phần | Tính điểm trung bình hệ tín chỉ">
     <meta property="og:type" content="blog" />
@@ -52,12 +51,12 @@
                     <div class="brand-logo">
                         <div class="facebook">
                             <a href="https://www.facebook.com/xuanphuc.tran.superman/">
-                                <img src="./assets/img/facebook-brands.svg" alt="Facebook">
+                                <img title="Facebook" src="./assets/img/facebook-brands.svg" alt="Facebook">
                             </a>
                         </div>
                         <div class="github">
                             <a href="https://github.com/xuanphuccc/Tinh-diem">
-                                <img src="./assets/img/github-brands.svg" alt="Github">
+                                <img title="Github" src="./assets/img/github-brands.svg" alt="Github">
                             </a>
                         </div>
                     </div>
@@ -95,7 +94,7 @@
             <div class="grid wide">
                 <div class="input-wraper"  id="input-tg">
                     <div class="training">
-                        <h4>Hướng dẫn:</h4>
+                        <h5>Hướng dẫn</h5>
                         <p>
                         B1: Nhập đầy đủ thông tin vào các ô bên dưới (không được bỏ trống) <br>
                         B2: Nhấn nút Lưu <br>
@@ -104,7 +103,6 @@
                         <br>*Trọng số: là tỉ lệ của điểm quá trình 
                         và điểm thi <br> (ví dụ: 40% - 60% tức là
                         điểm quá trình chiếm 40% và điểm thi chiếm 60% của điểm học phần).</p>
-                        <hr style="margin-bottom: 16px;">
                     </div>
     
                     <!-- ------------ Input ----------- -->
@@ -270,8 +268,7 @@
                     <div class="row no-gutters">
                         <div class="col l-6 m-6 c-12">
                             <div class="text-wrap">
-                                <h3>Công cụ tính điểm này sử dụng bảng quy đổi điểm
-                                    của Trường Đại học Giao thông Vận Tải Hà Nội</h3>
+                                <h3>Bảng quy đổi điểm</h3>
                                 <p>(Nếu trường bạn có công thức tương tự dưới đây
                                 thì bạn cũng có thể sử dụng công cụ này)</p>
                             </div>
@@ -279,7 +276,7 @@
                         </div>
                         <div class="col l-6 m-6 c-12">
                             <div class="img-wrap">
-                                <img src="./assets/img/tinh_diem.jpg" alt="Bảng quy đổi điểm">
+                                <img title="Bảng quy đổi điểm" src="./assets/img/tinh_diem.jpg" alt="Bảng quy đổi điểm">
                             </div>
                         </div>
                     </div>
@@ -294,12 +291,12 @@
                 <div class="brand-logo">
                     <div class="facebook">
                         <a href="https://www.facebook.com/xuanphuc.tran.superman/">
-                            <img src="./assets/img/facebook-brands.svg" alt="Facebook">
+                            <img title="Facebook" src="./assets/img/facebook-brands.svg" alt="Facebook">
                         </a>
                     </div>
                     <div class="github">
                         <a href="https://github.com/xuanphuccc/Tinh-diem">
-                            <img src="./assets/img/github-brands.svg" alt="Github">
+                            <img title="Github" src="./assets/img/github-brands.svg" alt="Github">
                         </a>
                     </div>
                 </div>
