--- a/test.html
+++ b/test.html
@@ -49,7 +49,6 @@
                 background-position: 0% 50%;
             }
         }
-
     </style>
 </head>
 <body>
@@ -79,12 +78,18 @@
     }
 
     function run() {
+        console.table(x);
         sorting(x);
-        call_me(x);
+        // call_me(x);
         console.table(x);
     }
 
     var space = document.querySelector('.box');
     space.addEventListener('click', run);
+
+    var test = NaN;
+    if (test != NaN) {
+        console.log('Test variable is not NaN');
+    } else console.log('Is NaN');
 </script>
 </html>
