--- a/index.html
+++ b/index.html
@@ -258,7 +258,18 @@
             </div>
 
             <!-- Diem trung binh hoc ky -->
-            <div class="tbhk"></div>
+            <div class="tbhk">
+                <div class="tbhk_title">
+                    <div class="tbhk_title-icon">
+                        <span class="material-symbols-rounded">
+                        workspace_premium
+                        </span>
+                    </div>
+                    <h3 class="tbhk_title-text">Điểm TB</h3>
+                </div>
+                <h4 class="noti-text">--</h3>
+                <p class="tbhk_description">Rất tốt</p>
+            </div>
 
             <!-- Xoa hang -->
             <div class="output-controls">
